@@ -1,14 +1,12 @@
 package chapter9;
 
 import java.util.ArrayList;
-import java.util.NoSuchElementException;
 
 public class SortedArrayListPriorityQueue<T> implements PriorityQueue<T> {
 
     private static class Entry<T> implements Comparable<Entry<T>> {
         final int priority;
         final T data;
-
         Entry(int priority, T data) {
             this.priority = priority;
             this.data = data;
@@ -28,25 +26,21 @@ public class SortedArrayListPriorityQueue<T> implements PriorityQueue<T> {
 
     @Override
     public void enqueue(int priority, T data) {
-        // insert so list is sorted by priority ASC (lower number = higher priority)
+        // TODO: insert so list is sorted by priority ASC (lower number is higher priority)
         list.add(new Entry<>(priority, data));
-        list.sort(null);  // sorts by Entry.compareTo()
+        list.sort(null);
     }
 
     @Override
     public T dequeue() throws Exception {
-        if (isEmpty()) {                         
-            throw new NoSuchElementException();  
-        }
+        // TODO: remove index 0
         return list.remove(0).data;
     }
 
     @Override
     public T front() throws Exception {
-        if (isEmpty()) {                         
-            throw new NoSuchElementException();  
-        }
-        return list.get(0).data;
+        // TODO: return index 0
+        return list.getFirst().data;
     }
 
     @Override
